add api weather

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   <form id="form">
     <div id="first">
         <input type="text" id="in">
         <input type="submit" id="sub">
     </div>
+   </form>
    <div id="seconde">
         <div id="top">
                 <div id="city">1</div>
